  e - added code to remove boot cpusets, if any, from the the Torque cpusets.
  b - relay_to_mom makes a call to svr_connect. The second parameter to svr_connect was
      using a hard coded value for the port. The value was changed to the mom port value
      indicated by the job structure.  3/29/2010  Ken Nielson


2.5.0
  f - added full support (server-scheduler-mom) for Cygwin (UIIP NAS of Belarus,
      uiip.bas-net.by)
  f - architecture and build system changes to support Cygwin (Igor Ilyenko, 
      uiip.bas-net.by)
  b - fixed EINPROGRESS in net_client.c. This signal appears every time of 
      connecting and requires individual processing. The old erroneous 
      processing brought to big network delay, especially on Cygwin.
  e - improved signal processing after connecting in client_to_svr and added own
      implementation of bindresvport for OS which lack it (Igor Ilyenko, 
      uiip.bas-net.by)
  f - created permission checking of Windows (Cygwin) users, using mkpasswd, 
      mkgroup and own functions IamRoot, IamUser (Yauheni Charniauski, 
      uiip.bas-net.by)
  f - created permission checking of submited jobs (Vikentsi Lapa, 
      uiip.bas-net.by)
  f - Added the --disable-daemons configure option for start server-sched-mom 
      as Windows services, cygrunsrv.exe goes its into background independently.
  e - Adapted output of Cygwin's diagnostic information (Yauheni Charniauski, 
      uiip.bas-net.by)
  b - Changed pbsd_main to call daemonize_server early only if 
      high_availability_mode is set.
  e - removed the very old A_ macros (patch provided by Simon Toth, CESNET z.s.p.o.)
  e - added new qmgr server attributes (clone_batch_size, clone_batch_delay) for 
      controlling job cloning (Bugzilla #4)
  e - added new qmgr attribute (checkpoint_defaults) for setting default
      checkpoint values on Execution queues (Bugzilla #1)
  b - PBSD_authenticate correctly splits PATH on : instead of ; (bugzilla #33)